CLDR-17829 updates per code review